src/test/deca/context/valid/avecObjet/asm_meth.deca
class A {
    void printHello() asm(
        "WSTR \"Hello World!\"
         WNL
         RTS"
    );
}