src/test/deca/context/invalid/avecObjet/override_asm.deca
class A {
    void f(int a) asm("RTS");
}

class B extends A {
    void f() asm("RTS");
}